# BreakoutGame

./: CMakeLists.txt  readme.md
include/glad/: glad.h
res/shaders/: ball.frag  brick.frag  brick.vert  default.frag  default.vert  paddle.frag  paddle.vert  shaderClass.cpp  shaderClass.h  shaderManager.h
src/: ball.cpp  ball.h  brick.cpp  brick.h  brickmanager.cpp  brickmanager.h  entity.cpp  entity.h  game.cpp  game.h  glad.c  main.cpp  paddle.cpp  paddle.h
src/source/: default.frag  ebo.cpp  ebo.h  renderer.cpp  renderer.h  shaderClass.cpp  shaderClass.h  texture.cpp  texture.h  vao.cpp  vao.h  vbo.cpp  vbo.h
